[package]
name = "ice_core"
version = "0.3.14"
authors = ["losfair <zhy20000919@hotmail.com>"]
description = "High performance Web engine"
license = "LGPL-3.0"
repository = "https://github.com/losfair/IceCore"

[lib]
name = "ice_core"
crate-type = ["cdylib"]

[profile.release]
lto = true

[features]
use_cervus = ["cervus"]

[dependencies]
hyper = "0.11"
futures = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
uuid = { version = "0.4", features = ["v4"] }
chrono = "0.4"
tera = "0.10"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
ansi_term = "0.9"
etag = "0.2"
sequence_trie = "0.3"
byteorder = "1.1"
lazy_static = "0.2"
cervus = { version = "0.3", optional = true }
net2 = "0.2"
num_cpus = "1.6"
url = "1.5"
redis = "0.8"
threadpool = "1.6"
r2d2_redis = "0.6"
r2d2 = "0.7"
