[package]
name = "ice_core"
version = "0.5.0"
authors = ["losfair <zhy20000919@hotmail.com>"]
description = "High performance Web engine"
license = "LGPL-3.0"
repository = "https://github.com/losfair/IceCore"

[dependencies]
wasm-translator = "0.1"
serde = "1"
serde_derive = "1"
serde_yaml = "0.7"
slab = "0.4"
futures = "0.1.20"
tokio = "0.1"
